--- a/package.json
+++ b/package.json
@@ -24,9 +24,18 @@
     "typeorm-example"
   ],
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
+    "ejs": "^2.7.1",
     "electron": "^7.0.0",
+    "electron-log": "^3.0.8",
+    "express": "^4.17.1",
+    "serve-favicon": "^2.5.0",
     "sqlite3": "^4.1.0",
-    "typeorm": "^0.2.20"
+    "typeorm": "^0.2.20",
+    "winston": "^3.2.1",
+    "winston-express": "^0.1.1"
   },
   "devDependencies": {
     "electron-builder": "^21.2.0",
