--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "electron": "^7.0.0",
     "electron-log": "^3.0.8",
     "express": "^4.17.1",
+    "mongodb": "^3.3.3",
     "react": "^16.11.0",
     "serve-favicon": "^2.5.0",
     "server-destroy": "^1.0.1",
     "sqlite3": "^4.1.0",
     "typeorm": "^0.2.20",
+    "uuid": "^3.3.3",
     "winston": "^3.2.1",
     "winston-express": "^0.1.1"
   },
