--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "copyfiles": "^2.1.1",
     "create-react-app": "^3.2.0",
     "electron-builder": "^21.2.0",
+    "rimraf": "^3.0.0",
     "typescript": "^3.6.4"
   },
   "scripts": {
-    "start": "tsc && copyfiles -u 1 src/**/*.html src/**/*.png src/**/*.css src/**/*.ico  build && electron build/index.js",
+    "start": "rimraf build && cd ui && yarn build && cd .. && tsc && copyfiles -u 1 src/**/*.html src/**/*.png src/**/*.css src/**/*.ico  build && electron build/index.js",
     "postinstall": "install-app-deps"
   }
 }
